; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_optimizer.c_GetAggregateType.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_optimizer.c_GetAggregateType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"citus cache lookup failed for function %u\00", align 1
@AggregateNames = common dso_local global i8** null, align 8
@AGGREGATE_INVALID_FIRST = common dso_local global i64 0, align 8
@NAMEDATALEN = common dso_local global i32 0, align 4
@AGGREGATE_CUSTOM = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [34 x i8] c"unsupported aggregate function %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @GetAggregateType to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @GetAggregateType(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* null, i8** %4, align 8
  store i64 0, i64* %5, align 8
  store i64 0, i64* %6, align 8
  store i32 0, i32* %7, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = call i8* @get_func_name(i8* %9)
  store i8* %10, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load i32, i32* @ERROR, align 4
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @errmsg(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i8* %15)
  %17 = call i32 @ereport(i32 %14, i32 %16)
  br label %18

18:                                               ; preds = %13, %1
  %19 = load i8**, i8*** @AggregateNames, align 8
  %20 = call i64 @lengthof(i8** %19)
  store i64 %20, i64* %5, align 8
  %21 = load i64, i64* @AGGREGATE_INVALID_FIRST, align 8
  %22 = icmp eq i64 %21, 0
  %23 = zext i1 %22 to i32
  %24 = call i32 @Assert(i32 %23)
  store i64 1, i64* %6, align 8
  br label %25

25:                                               ; preds = %41, %18
  %26 = load i64, i64* %6, align 8
  %27 = load i64, i64* %5, align 8
  %28 = icmp ult i64 %26, %27
  br i1 %28, label %29, label %44

29:                                               ; preds = %25
  %30 = load i8**, i8*** @AggregateNames, align 8
  %31 = load i64, i64* %6, align 8
  %32 = getelementptr inbounds i8*, i8** %30, i64 %31
  %33 = load i8*, i8** %32, align 8
  store i8* %33, i8** %8, align 8
  %34 = load i8*, i8** %8, align 8
  %35 = load i8*, i8** %4, align 8
  %36 = load i32, i32* @NAMEDATALEN, align 4
  %37 = call i64 @strncmp(i8* %34, i8* %35, i32 %36)
  %38 = icmp eq i64 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %29
  store i32 1, i32* %7, align 4
  br label %44

40:                                               ; preds = %29
  br label %41

41:                                               ; preds = %40
  %42 = load i64, i64* %6, align 8
  %43 = add i64 %42, 1
  store i64 %43, i64* %6, align 8
  br label %25

44:                                               ; preds = %39, %25
  %45 = load i32, i32* %7, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %58, label %47

47:                                               ; preds = %44
  %48 = load i8*, i8** %3, align 8
  %49 = call i64 @AggregateEnabledCustom(i8* %48)
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %53

51:                                               ; preds = %47
  %52 = load i64, i64* @AGGREGATE_CUSTOM, align 8
  store i64 %52, i64* %2, align 8
  br label %60

53:                                               ; preds = %47
  %54 = load i32, i32* @ERROR, align 4
  %55 = load i8*, i8** %4, align 8
  %56 = call i32 @errmsg(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i8* %55)
  %57 = call i32 @ereport(i32 %54, i32 %56)
  br label %58

58:                                               ; preds = %53, %44
  %59 = load i64, i64* %6, align 8
  store i64 %59, i64* %2, align 8
  br label %60

60:                                               ; preds = %58, %51
  %61 = load i64, i64* %2, align 8
  ret i64 %61
}

declare dso_local i8* @get_func_name(i8*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*, i8*) #1

declare dso_local i64 @lengthof(i8**) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i64 @strncmp(i8*, i8*, i32) #1

declare dso_local i64 @AggregateEnabledCustom(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
